fixes dark mode

--- a/client/public/assets/scss/elements/_profile.scss
+++ b/client/public/assets/scss/elements/_profile.scss
@@ -138,6 +138,7 @@ a {
     background: #fff;
     padding: 30px;
     box-shadow: 0px 10px 30px rgba(219, 0, 0, 0.2);
+    border-radius:5px;
 }
 
 .form-wrapper form {
